# The-Local-Minima

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  validate-submission.sh
openenv_the_local_minima.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: __init__.py  app.py  the_local_minima_environment.py
server/data/: pune_weather.epw
